# axum-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 0001_create_tasks.sql
src/: main.rs
src/routes/: auth.rs  health.rs  middleware_auth.rs  mod.rs
src/routes/tasks/: dto.rs  model.rs  queries.rs  routes.rs
