[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dotenvy = "0.15.7"
sqlx = {version = "0.8.6", features = ["runtime-tokio-restls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.18.1", features = ["serde","v4"] }
chrono = { version = "0.4", features = ["serde"] }